design-principles-02/src/main/java/com/farhad/example/design_principles02/rock_paper_scissors_game/bad/GameCordinator.java
package com.farhad.example.design_principles02.rock_paper_scissors_game.bad;

public class GameCordinator {

	public static void main(String[] args) {
		
	}
}
